--- a/app/globals.css
+++ b/app/globals.css
@@ -64,15 +64,16 @@
 }
 
 @layer base {
-  html, body {
+  html,
+  body {
     @apply overflow-x-hidden;
   }
 }
 
 /* ButtonHomeConFlecha */
 .cssbuttons-io-button {
-  background: #315F6D;
-  color: white;
+  background: #068478;
+  color: #b5e7e3;
   font-family: montserrat, sans-serif;
   padding: 0.35em;
   padding-left: 1.2em;
@@ -83,7 +84,7 @@
   letter-spacing: 0.05em;
   display: flex;
   align-items: center;
-  box-shadow: inset 0 0 1.6em -0.6em #00A6B2;
+  box-shadow: inset 0 0 1.6em -0.6em #08b0a0;
   overflow: hidden;
   position: relative;
   height: 2.8em;
@@ -102,7 +103,7 @@
   height: 2.2em;
   width: 2.2em;
   border-radius: 0.7em;
-  box-shadow: 0.1em 0.1em 0.6em 0.2em #00A6B2;
+  box-shadow: 0.1em 0.1em 0.6em 0.2em #08b0a0;
   right: 0.3em;
   transition: all 0.3s;
 }
@@ -114,7 +115,7 @@
 .cssbuttons-io-button .icon svg {
   width: 1.1em;
   transition: transform 0.3s;
-  color: #00A6B2;
+  color: #08b0a0;
 }
 
 .cssbuttons-io-button:hover .icon svg {
@@ -127,7 +128,7 @@
 
 /* ButtonHomeSinFlecha */
 .button {
-  --color: #00A6B2;
+  --color: #08b0a0;
   padding: 0em 1.7em;
   background-color: transparent;
   border-radius: 0.9em;
@@ -135,17 +136,18 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
-  transition: .5s;
+  transition: 0.5s;
   font-weight: 500;
   font-size: 17px;
   border: 2px solid;
   text-transform: uppercase;
   color: var(--color);
   z-index: 1;
- }
- 
- .button::before, .button::after {
-  content: '';
+}
+
+.button::before,
+.button::after {
+  content: "";
   display: block;
   width: 50px;
   height: 50px;
@@ -155,28 +157,28 @@
   z-index: -1;
   background-color: var(--color);
   transition: 1s ease;
- }
- 
- .button::before {
+}
+
+.button::before {
   top: -1em;
   left: -1em;
- }
- 
- .button::after {
+}
+
+.button::after {
   left: calc(100% + 1em);
   top: calc(100% + 1em);
- }
- 
- .button:hover::before, .button:hover::after {
+}
+
+.button:hover::before,
+.button:hover::after {
   height: 410px;
   width: 410px;
- }
- 
- .button:hover {
-  color: rgb(255, 255, 255);
- }
- 
- .button:active {
-  filter: brightness(.8);
- }
- 
+}
+
+.button:hover {
+  color: #b5e7e3;
+}
+
+.button:active {
+  filter: brightness(0.8);
+}
